--- a/_posts/2020-06-22-遗传算法.md
+++ b/_posts/2020-06-22-遗传算法.md
@@ -9,4 +9,4 @@ category: blog
 ### 遗传算法不是穷举，是一种启发式搜索
 ### 采用并行策略，找到全局最优。
 
-![image-20200622095417575](.\pic\image-20200622095417575.png)
+![image-20200622095417575](./image/githubpage/image-20200622095417575.png)
