--- a/_posts/2020-06-22-demo.md
+++ b/_posts/2020-06-22-demo.md
@@ -4,3 +4,7 @@ title: demo
 description: demo
 category: blog
 ---
+
+![image-20200622095417575](/images/githubpages/image-20200622095417575.png)
+
+![image-20200622101125192](\images\githubpages\image-20200622101125192.png)
