--- a/_posts/2020-06-22-demo.md
+++ b/_posts/2020-06-22-demo.md
@@ -8,3 +8,7 @@ category: blog
 ![image-20200622095417575](/images/githubpages/image-20200622095417575.png)
 
 ![image-20200622101125192](\images\githubpages\image-20200622101125192.png)
+
+![image-20200622101235473](\images\githubpages\image-20200622101235473.png)
+
+![image-20200622101315822](\images\githubpages\image-20200622101315822.png)
