--- a/_posts/2022-10-6-react探寻1.md
+++ b/_posts/2022-10-6-react探寻1.md
@@ -137,3 +137,112 @@ let b = new B()
 </script>
 ```
 
+- proptype是具有键值对的对象，其中键（key)是prop的名称，而值代表其被定义的类型（type)或者类（class)。因此被简化为如下形式：XXXX.propTypes。
+- propTypes有以下类型组成：Type Class
+- String        PropType.String
+- Object        PropType.Object
+- Number        PropType.number
+- Boolean       PropType.bool
+- Function      PropType.func
+- Symbol        PropType.symbol
+
+## 如果该类型（留上文的MyComponents中的类型和PropTypes中的类型不同，则控制台会出现报错
+
+- 对于对象类型可以通过objectOf、instanceOf和shape去规定
+```
+Count.propTypes = {
+  basicObject: PropTypes.object,
+  numbers: PropTypes.objectOf(PropTypes.numbers),
+  messages: PropTypes.instanceOf(Message),
+  contactList: PropTypes.shape({
+    name: PropTypes.string.isRequired,
+    phone: PropTypes.string.isRequired,
+  }),
+};
+```
+- 数组类型可以用以下来规定
+```
+Count.propTypes = {
+  counts: PropTypes.array,
+  users: PropTypes.arrayOf(PropTypes.object),
+  alarmColor: PropTypes.oneOf(['red', 'blue']),
+  description: PropTypes.oneOfType([
+  PropTypes.string,
+  PropTypes.instanceOf(Title)
+  ]),
+  }
+
+```
+
+可以为父类添加validate函数判断子类的类型名和定义的是否相同
+```
+<script>
+    class Rectangle {
+        constructor() {
+            this.props = arguments[0]
+            // 模拟类型验证
+            this.validate(this.constructor)
+        }
+        validate(subClass) {
+            Object.keys(subClass.propTypes).forEach(key => {
+                const propType = subClass.propTypes[key]
+                const type = typeof this.props[key]
+                if (type !== propType) {
+                    console.error(`Warning： ${key} 属性 - 期待类型是 ${propType}，所传入的类型确是 ${type}`)
+                }
+            })
+        }
+    }
+
+    class Square extends Rectangle {
+        render() {
+
+        }
+    }
+
+    Square.propTypes = {
+        name: 'string',
+        age: 'number'
+    }
+    let square = new Square({ name: 18, age: 'pjl' })
+    square.render()
+</script>
+```
+## 嵌套组件
+- this.props 对象的属性与组件的属性一一对应，但其中有一个比较特殊的参数：this.props.children。它表示组件所有的子节点。
+- 如下例，一个 span 标签在 Parent 中作为Child的子节点传入，可在 Child 中通过 this.props.children 取到：
+```
+class Parent extends React.Component {
+  render() {
+    return (
+    <Child>
+        <span>{'child node'}</span>
+      </Child>
+    );
+  }
+}
+class Child extends React.Component {
+  render() {
+    return (
+      <div>
+        {this.props.children}
+      </div>
+    );
+  }
+}
+```
+- 从而实现类似于vue中的插槽的功能
+```
+return (
+    <div>
+      <div>{this.props.children[2]}</div>
+      <div>{this.props.children[1]}</div>
+      <div>{this.props.children[0]}</div>
+    </div>
+  )
+```
+- prop.child通过PropTypes.element进行类型检查
+- React.Children.map(object children, function fn)会字每一个子节点上调用fn函数，并返回一个对象
+- React.Children.forEach仅仅调用fn,不进行返回。
+- React.Children.count统计了children中的组件总数
+- React.Children.only返回 children 中仅有的子节点
