--- a/_posts/2022-10-6-react探寻1.md
+++ b/_posts/2022-10-6-react探寻1.md
@@ -246,3 +246,55 @@ return (
 - React.Children.forEach仅仅调用fn,不进行返回。
 - React.Children.count统计了children中的组件总数
 - React.Children.only返回 children 中仅有的子节点
+
+## 动态组件
+- React通过render渲染了最终拼接的react element,通过react 组件可以实现信息在element之间更好的传递，并提高了element的 复用性，但是这些仅仅对于静态文案。
+- 状态可以帮助解决动态组件的问题this.state。
+- 通过 this.state 访问的是可变状态；通过 this.props 访问的是不可变状态
+- state 和 props 是数据的传输工具，这些数据构成应用并使其有用。
+- State 与 props 类似，但是 state 是私有的，并且完全受控于当前组件 —— 官网
+- react 中的 props 用来接收父组件传来的属性，state 是私有属性
+- 应该在什么时候使用 state？想要改变存储在组件中的数据时。
+- ```
+- class MySubComponent extends React.Component {
+        constructor(props){
+            // 如果不需要使用 this.props，则可以是 super()
+            super(props)
+            // 在构造函数中访问 this 之前，一定要调用 super()，它负责初始化 this
+            this.state = {age: 18}
+        }
+        render() {
+            const c = React.createElement
+            return React.createElement(
+                'form',
+                { className: 'sub-class' },
+                c('p', { }, 
+                    c('input', {type: 'text', value: this.state.age})
+                ),
+                c('p', { }, 
+                    c('input', {type: 'submit', value: 'submit'})
+                ),
+            )
+        }
+    }```
+- state不能直接修改, react 中this.setState()） 来更新 React 类组件中的状态。
+```
+class Clock extends React.Component {
+    constructor(props) {
+        super(props)
+        this.state = { date: new Date() }
+        // bind() 方法会返回一个新的函数，里面绑定 this，否则 tick() 报错如下：
+        // Uncaught TypeError: this.setState is not a function
+        setInterval(this.tick.bind(this), 1000)
+    }
+    tick() {
+        // 通过 setState 修改 state
+        this.setState({
+            date: new Date()
+        })
+    }
+    render() {
+        // ... 不变
+    }
+}
+```
